<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="album"
            type="com.example.frontvynils.models.Album" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/editTextTrackName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/track_name"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="22sp"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/editTextDurationTrack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/duration_track"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="22sp"
                    tools:ignore="TextFields" />

                <ImageView
                    android:id="@+id/saveTrack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/save_album"
                    android:gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/content_save"
                    android:state_checked="true"
                    app:strokeWidth="0dp"
                    app:tint="@color/gray" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
