<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".ui.AlbumFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="101dp"
            android:layout_height="41dp"
            android:layout_gravity="left"
            android:text="@string/txt_catalog"
            android:textColor="@color/gray"
            android:textSize="22sp"
            tools:ignore="RtlHardcoded" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albumsRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/album_item" />

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="8dp"
        android:src="@drawable/baseline_add_to_photos_24"
        android:focusable="true"
        android:contentDescription="@string/create_album" />
</FrameLayout>